--- a/style.css
+++ b/style.css
@@ -145,6 +145,9 @@ h2 {
   background-color: #222;
   color: #fff;
   border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 24px;
   border-radius: 50%;
   width: 48px;
@@ -271,7 +274,9 @@ h2 {
   position: fixed;
   bottom: 40px;
   right: 40px;
-  display: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   z-index: 1000;
   background-color: #444;
   color: #fff;
