--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header {
   max-width: 100%;
   height: 200px;
   z-index: 1;
-  background-image: url(img/Banner.jpg) ;
+  background-image: url(imgs/Banner.jpg) ;
   background-size: 100% 99%;
   background-position: center;
   box-sizing: border-box;
