--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header {
   max-width: 100%;
   height: 200px;
   z-index: 1;
-  background-image: url(imgs/Banner.jpg) ;
+  background-image: url(imgs/Banner.jpg);
   background-size: 100% 99%;
   background-position: center;
   box-sizing: border-box;
@@ -135,6 +135,7 @@ h3 {
   background-color: #5bc0de;
   width: 0%;
 }
+
 /* 联系 */
 .contact {
   list-style: none;
@@ -194,8 +195,10 @@ h3 {
 
 /* 浅色模式支持切换 */
 .light-mode {
-  background-color: #f5f5f5; /* 浅色模式下背景颜色 */
-  color: #5c5c5c;/* 浅色模式下字体颜色 */
+  background-color: #f5f5f5;
+  /* 浅色模式下背景颜色 */
+  color: #5c5c5c;
+  /* 浅色模式下字体颜色 */
 }
 
 .light-mode a {
@@ -261,11 +264,11 @@ h3 {
   }
 }
 
- /* 亮色主题下：光标变黑  */
+/* 亮色主题下：光标变黑  */
 .light-mode .typing {
   border-right: 3px solid #000000;
 
-} 
+}
 
 
 
@@ -417,6 +420,58 @@ footer a:hover {
 .video-wrapper:hover {
   transform: scale(1.03);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+}
+
+
+/* 验证弹窗 */
+/* 弹窗背景遮罩 */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+/* 弹窗内容区域 */
+.modal-content {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 30px 20px;
+  border-radius: 8px;
+  width: 300px;
+  text-align: center;
+  position: relative;
+}
+
+/* 输入框和按钮 */
+.modal-content input {
+  width: 90%;
+  padding: 10px;
+  margin-top: 15px;
+  font-size: 16px;
+}
+
+.modal-content button {
+  padding: 8px 16px;
+  font-size: 16px;
+  background-color: #222;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  margin-top: 10px;
+}
+
+/* 关闭按钮 */
+.modal-content .close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 22px;
+  cursor: pointer;
+  color: #666;
 }
 
 
